<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:paddingTop="20dp"
    android:weightSum="1"
    android:id="@+id/main_lay"
    android:background="@android:color/black">

    <Button android:id="@+id/ball_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ball_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="137dp">
    </Button>

    <TextView
        android:text="@string/strike_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/strike_value"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_above="@+id/ball_value"
        android:layout_alignLeft="@+id/ball_value"
        android:layout_alignStart="@+id/ball_value"
        android:layout_marginBottom="13dp" />

    <TextView
        android:text="@string/ball_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ball_value"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_alignBaseline="@+id/ball_label"
        android:layout_alignBottom="@+id/ball_label"
        android:layout_toRightOf="@+id/ball_label"
        android:layout_toEndOf="@+id/ball_label" />

    <Button android:id="@+id/strike_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strike_button"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/ball_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </Button>

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/out_value"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/ball_value"
        android:layout_alignLeft="@+id/ball_value"
        android:layout_alignStart="@+id/ball_value"
        android:layout_marginTop="16dp" />

    <TextView
        android:text="@string/ball_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ball_label"
        android:textSize="24sp"
        android:layout_marginBottom="95dp"
        android:textColor="@android:color/white"
        android:layout_above="@+id/strike_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/strike_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/strike_label"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:layout_alignBaseline="@+id/strike_value"
        android:layout_alignBottom="@+id/strike_value"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/out_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/out_label"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_alignBaseline="@+id/out_value"
        android:layout_alignBottom="@+id/out_value"
        android:layout_alignRight="@+id/ball_label"
        android:layout_alignEnd="@+id/ball_label" />

    <Button
        android:text="Long Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:id="@+id/long_click"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/out_value"
        android:layout_toStartOf="@+id/out_value" />

</RelativeLayout>